// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should open an external link 1`] = `
<DocumentFragment>
  <a
    class="inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    rel="noopener noreferrer"
    to="https://ark.io/"
  >
    <span
      class="underline-dotted"
    />
    <div
      class="flex-shrink-0 sc-bdfBwQ fPrsah "
      data-testid="Link__external"
      height="1em"
      width="1em"
    >
      <svg>
        redirect.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link should render 1`] = `
<DocumentFragment>
  <a
    class="inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer Link__AnchorStyled-sc-1q7sbxr-0 text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="/test"
  >
    <span
      class="underline-dotted"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should render external without children 1`] = `
<DocumentFragment>
  <a
    class="inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    rel="noopener noreferrer"
    to="https://ark.io"
  >
    <span
      class="underline-dotted"
    />
    <div
      class="flex-shrink-0 sc-bdfBwQ fPrsah "
      data-testid="Link__external"
      height="1em"
      width="1em"
    >
      <svg>
        redirect.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link should render with tooltip 1`] = `
<DocumentFragment>
  <a
    class="inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer Link__AnchorStyled-sc-1q7sbxr-0 text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    href="/test"
  >
    <span
      class="underline-dotted"
    >
      Test
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link should show a toast when trying to open an invalid external link 1`] = `
<DocumentFragment>
  <a
    class="inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer Link__AnchorStyled-sc-1q7sbxr-0 cIuuRE text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
    data-testid="Link"
    rel="noopener noreferrer"
    to="invalid-url"
  >
    <span
      class="underline-dotted"
    />
    <div
      class="flex-shrink-0 sc-bdfBwQ fPrsah "
      data-testid="Link__external"
      height="1em"
      width="1em"
    >
      <svg>
        redirect.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
